Enquire button form fix

--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -119,7 +119,7 @@ select::-ms-expand {
 // Submit private enquiry form
 
 #enquiry_form {
-    input,
+    input:not([type="submit"]),
     select {
         height: 44px;
         line-height: 44px;
