--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -216,6 +216,7 @@
             list-style: none;
             @include uniformAlignment;
             @include flex-center;
+            justify-content: flex-start;
             flex-direction: column;
             color: #ffffff;
             font-size: 14px;
