Hide consultants button

--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -1,11 +1,11 @@
-.mainHeaderWrap {
+.header-wrapper {
     background: $aqua;
     //width: $fullWidth;
     margin: $centerOnPage;
     width: 100%;
     text-align: center;
 
-    .mainHeader {
+    .header {
         width: $pageWrap;
         margin: $centerOnPage;
         letter-spacing: -1px;
