--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -239,6 +239,7 @@
                 top: 0;
                 bottom: 0;
                 width: 20px;
+                width: 20px;
                 height: 20px;
                 line-height: 20px;
             }
@@ -295,7 +296,6 @@
                 position: absolute;
                 left: 0px;
                 top: 0px;
-                width: 22px;
                 width: 40px;
                 height: 40px;
             }
@@ -347,7 +347,7 @@
         }
 
         &.btn-special-offer {
-            padding: 13px 20px;
+            padding: 13px 20px 13px 40px;
             border-radius: 10px;
             font-size: 14px;
             color: $white;
@@ -368,17 +368,17 @@
                 line-height: 40px;
             }
 
-            &:after {
-                background-image: url('../images/icons/plus-solid.svg');
-                @include icon-bg-center(30%);
-                position: absolute;
-                right: 0;
-                top: 0;
-                bottom: 0;
-                width: 40px;
-                height: 40px;
-                line-height: 40px;
-            }
+            //&:after {
+            //    background-image: url('../images/icons/plus-solid.svg');
+            //    @include icon-bg-center(30%);
+            //    position: absolute;
+            //    right: 0;
+            //    top: 0;
+            //    bottom: 0;
+            //    width: 40px;
+            //    height: 40px;
+            //    line-height: 40px;
+            //}
 
         }
 
