--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -76,7 +76,7 @@
             }
 
             .description {
-                color: #1c1c1c;
+                color: $darkerGrey;
                 font-size: 24px;
                 font-weight: 600;
                 letter-spacing: -0.72px;
