--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -15,13 +15,15 @@ input[type=submit] {
   background: none;
 }
 
-select.big,
-input.big {
+// Larger input/select
+input.big,
+select.big {
     font-size: 18px;
     font-weight: 500;
     letter-spacing: -0.9px;
-    line-height: 19px;
-    padding: 20px 45px 20px 16px;
+    height: 61px;
+    line-height: 61px;
+    padding: 0 45px 0 16px;
 }
 
 .bg-teal{
