--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,19 +25,19 @@ $white: #ffffff;
 $greylight: #F6F6F6;
 
 //Main Template colours
-$darkerWhite:#f5f5f5;
+$darkerWhite: #f5f5f5;
 $darkestWhite: #ebebeb;
-$aqua:#00cecd;
+$aqua: #00cecd;
 $darkerAqua: #00b5b4;
-$lightGrey: #ebebeb;
+$lightGrey: $darkestWhite;
 $lighterGrey: #ececec;
-$lighestGrey:#1b1b1b;
-$darkerGrey:#1c1c1c;
+$lighestGrey: #1b1b1b;
+$darkerGrey: #1c1c1c;
 $sunnyYellow: #fff568;
 $footerGrey: #363636;
 $sectionBeige: #ececec;
 $darkBlue: #1b71f3;
-$hotpink:  #ed0373;
+$hotpink: #ed0373;
 $caretBlack: #040202;
 
 // Borders
@@ -53,7 +53,7 @@ $fullWidth: 100%;
 //center on page
 
 $pageWrap: 1180px;
-$centerOnPage:  auto;
+$centerOnPage: auto;
 
 
 //POSITIONS
@@ -96,5 +96,25 @@ $input-padding-y: 0;
 $input-padding-x: 1rem;
 $input-height: 3;
 $input-line-height: 3;
-$input-placeholder-color: #1c1c1c;
+$input-placeholder-color: $darkerGrey;
 $input-font-weight: 500;
+
+// Select picker
+
+//$color-red-error: rgb(185, 74, 72) !default;
+//$color-green-success: #28a745;
+//$color-grey-arrow: rgba(204, 204, 204, 0.2) !default;
+//
+$width-default: 100%;
+//
+//$zindex-select-dropdown: 1060 !default; // must be higher than a modal background (1050)
+//
+//** Placeholder text color
+$input-color-placeholder: $darkerGrey;
+$input-alt-color-placeholder: $darkerGrey;
+//
+//$input-padding-y-sm: .25rem !default;
+//$input-padding-x-sm: .5rem !default;
+//
+//$input-padding-y-lg: 0.5rem !default;
+//$input-padding-x-lg: 1rem !default;
