--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -1,5 +1,5 @@
 //BANNER SECTION
-.bannerParent {
+.banner-parent {
     width: 100%;
     height: auto;
 
@@ -27,7 +27,7 @@
     }
 }
 
-.bannerData {
+.banner-data {
     @include flex;
     width: $pageWrap;
     margin: auto;
@@ -36,7 +36,7 @@
 }
 
 //BANNER CONTENTS
-.homePostCodeParent {
+.home-postcode-parent {
     @include uniformAlignment;
 }
 
