--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -53,7 +53,7 @@
         padding: 10px 40px 10px 13px;
         background-color: $white;
         /* Style for "Knee Opera" */
-        color: #1c1c1c;
+        color: $darkerGrey;
         font-size: 12px;
         font-weight: 500;
         letter-spacing: -0.6px;
