Passing through lat/long to frontend

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -283,7 +283,7 @@
         margin-bottom: 2px;
     }
 
-    .findLink {
+    .find-link {
         color: #00cecd;
         font-size: 14px;
         font-weight: 700;
