--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -2,7 +2,7 @@
 
 .popover {
     /* Style for "For privat" */
-    color: #000000;
+    color: $black;
     font-size: 10px;
     font-weight: 400;
     letter-spacing: -0.5px;
@@ -10,11 +10,7 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
     border-radius: 15px;
     border: none;
-
-    .link {
-        color: #000;
-        text-decoration: underline;
-    }
+    text-align: center;
 
     .popover-header {
         border: none;
@@ -31,6 +27,7 @@
         border: 4px solid #000000;
         border-radius: 20px;
         max-width: 273px;
+        text-align: left;
 
         .popover-body {
             padding: 25px;
