--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -93,7 +93,7 @@ select.big {
 .text-link {
     cursor: pointer;
     color: inherit;
-    text-decoration: underline;
+    text-decoration: underline !important;
 
     &:hover {
         color: inherit;
