--- a/resources/sass/components/basic/select.scss
+++ b/resources/sass/components/basic/select.scss
@@ -8,16 +8,16 @@
         }
     }
 
-    // Button added by BS select
     .dropdown-toggle {
-        height: 61px;
-        line-height: 61px;
-        padding: 0 45px 0 16px;
-        width: 100%;
-        border-radius: 10px;
+        padding: 10px 40px 10px 13px;
+        background-color: $white;
         color: $darkerGrey;
-        font-size: 18px;
+        font-size: 12px;
+        font-weight: 500;
+        letter-spacing: -0.6px;
+        line-height: 15px;
         border: 2px solid $darkestWhite;
+        border-radius: 10px;
 
         &:after {
             display: none;
@@ -32,5 +32,25 @@
             background-color: #fff !important;
         }
     }
+
+    &.big {
+        // Button added by BS select
+        .dropdown-toggle {
+            height: 61px;
+            line-height: 61px;
+            padding: 0 45px 0 16px;
+            width: 100%;
+            border-radius: 10px;
+            color: $darkerGrey;
+            font-size: 18px;
+            border: 2px solid $darkestWhite;
+        }
+    }
 }
 
+.results-page {
+    .dropdown-toggle,
+    .searchPageSelect {
+        max-width: 158px;
+    }
+}
