add cookie consent plugin

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,9 @@
 // Bootstrap select picker
 @import '~bootstrap-select/sass/bootstrap-select';
 
+// Cookie consent
+@import '~cookieconsent/build/cookieconsent.min.css';
+
 // Font-awesome
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
