move gmaps api key to config

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import '~bootstrap-select/sass/bootstrap-select';
 
 // Cookie consent
+// https://github.com/osano/cookieconsent
 @import '~cookieconsent/build/cookieconsent.min.css';
 
 // Font-awesome
