Fix bug: Bug: The tooltips of the Homepage that if you scroll it's showing it weird

--- a/resources/sass/components/basic/_popover.scss
+++ b/resources/sass/components/basic/_popover.scss
@@ -57,7 +57,18 @@
                 border: none;
             }
         }
+
+        // Move arrow if popover below trigger
+        &.bs-popover-bottom {
+            .arrow-large {
+                bottom: calc(100% - 8px);
+                top: auto;
+                left: calc(50% - 40px) !important;
+                transform: rotate(180deg) scaleX(-1);
+            }
+        }
     }
+
 }
 
 
