- Sorting the columns by the arrows from the Header of the table

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -236,6 +236,13 @@
                 cursor: pointer;
                 //background-color: red;
             }
+            span.sort-arrow.asc {
+                transform: rotateX(0deg);
+            }
+
+            span.sort-arrow.desc {
+                transform: rotateX(180deg);
+            }
         }
     }
 
