--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -121,3 +121,12 @@ $input-alt-color-placeholder: $darkerGrey;
 //
 //$input-padding-y-lg: 0.5rem !default;
 //$input-padding-x-lg: 1rem !default;
+
+// Grid resets
+
+$container-max-widths: (
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1200px
+)
