--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -83,11 +83,11 @@
     //=======================END WHY CHOOSE SECTION=======================
 
     //============================HOW SECTION=============================
-    .howSectionParent {
+    .how-section__parent {
         width: $pageWrap;
         margin: 30px auto;
 
-        .pageTitle {
+        .section-title {
             font-size: 40px;
             font-weight: 600;
             letter-spacing: -2px;
@@ -95,13 +95,13 @@
             margin-bottom: 25px;
         }
 
-        .iconTitle, .iconDescription {
+        .icon-title, .icon-description {
             //width:89%;
             color: #1b1b1b;
 
         }
 
-        .iconTitle {
+        .icon-title {
             font-size: 22px;
             font-weight: 500;
             letter-spacing: -1.1px;
@@ -109,7 +109,7 @@
             margin-bottom: 25px;
         }
 
-        .iconDescription {
+        .icon-description {
             font-size: 20px;
             font-weight: 400;
             letter-spacing: -1px;
@@ -117,7 +117,7 @@
         }
     }
 
-    .howSection {
+    .how-section {
         @include flex;
         @include justify-content($value: space-between);
         position: relative;
@@ -125,11 +125,10 @@
     }
 
 
-    .chooseContent {
+    .how-section__child {
         text-align: center;
         //padding: 0 5.5%;
-        position: $relative;
-        margin-right: 30px;
+        position: relative;
 
         .icon {
             @include flex;
