--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -283,3 +283,31 @@
         background-color: $bgColor;
     }
 }
+
+// Custom BS grid gutters
+@mixin reset-row-spacing($spacing) {
+    margin-left: -$spacing;
+    margin-right: -$spacing;
+
+    > * {
+        padding-left: $spacing;
+        padding-right: $spacing;
+    }
+}
+
+// Add opacity mask over image
+@mixin mask($bgColor: $teal, $opacity: 0.8) {
+    position: relative;
+    overflow: hidden;
+
+    &:before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $bgColor;
+        opacity: $opacity;
+    }
+}
