--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -84,8 +84,7 @@
 
     //============================HOW SECTION=============================
     .how-section__parent {
-        width: $pageWrap;
-        margin: 30px auto;
+        margin: 45px auto;
 
         .section-title {
             font-size: 40px;
@@ -95,7 +94,8 @@
             margin-bottom: 25px;
         }
 
-        .icon-title, .icon-description {
+        .icon-title,
+        .icon-description {
             //width:89%;
             color: #1b1b1b;
 
@@ -122,6 +122,10 @@
         @include justify-content($value: space-between);
         position: relative;
         //left: -70px;
+
+        .row {
+            @include reset-row-spacing(40px);
+        }
     }
 
 
@@ -131,9 +135,15 @@
         position: relative;
 
         .icon {
-            @include flex;
-            @include justify-content($value: center);
-            margin-bottom: 20px;
+            //@include flex;
+            //@include justify-content($value: center);
+            margin-bottom: 25px;
+            height: 120px;
+
+            img {
+                height: 100%;
+                width: auto;
+            }
         }
 
         .numeral {
@@ -148,20 +158,21 @@
     //============================ END HOW SECTION=============================
 
     //=========================HEALTH CHOICE SECTION===========================
-    .chooseHealthParent {
-        width: $pageWrap;
-        margin: 60px auto;
+    .choose-health-parent {
+        margin: 0 auto 60px;
 
-        .chooseHealth {
+        .choose-health {
             height: 410px;
             background: url('../images/placeholder.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             border-radius: 20px;
             position: relative;
+
+            @include mask($lighestGrey, 0.38);
         }
 
-        .chooseHealthText {
+        .choose-health-text {
             width: $fullWidth / 1.8;
             color: $white;
             font-size: 27px;
@@ -172,7 +183,7 @@
             text-align: center;
         }
 
-        .chooseHealthText p {
+        .choose-health-text p {
             margin-top: 50px;
             text-align: center;
         }
