--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,11 +2,9 @@
 $transition: 0.3s all ease;
 
 // Fonts
+$headings-font-family: 'SofiaPro-Bold', sans-serif;
 $font-family-sans-serif: 'Sofia Pro', sans-serif;
-$headings-font-family: 'Sofia Pro', sans-serif;
 $headings-font-weight: normal; // font is bold, so normal is standard bold
-// Typography
-//$font-family-sans-serif: 'sofia', sans-serif;
 //$font-size-base: 0.9rem;
 //$line-height-base: 1.6;
 
