new tooltip text

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,7 @@ $transition: 0.3s all ease;
 
 // Fonts
 $headings-font-family: 'SofiaPro-Bold', sans-serif;
-$font-family-sans-serif: 'Sofia Pro', sans-serif;
+$font-family-sans-serif: 'SofiaPro-Regular', sans-serif;
 $headings-font-weight: normal; // font is bold, so normal is standard bold
 //$font-size-base: 0.9rem;
 //$line-height-base: 1.6;
