--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -146,7 +146,7 @@
     }
 
     .sortCategoriesParent {
-        background: linear-gradient(to bottom, rgba(0, 206, 205, 0.72), rgba(0, 206, 205, 0.93));
+        background-color: $teal;
 
     }
 
