--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -83,7 +83,7 @@
                 }
             }
 
-            a {
+            > a {
                 display: inline-block;
                 color: $white;
                 font-size: 1.3em;
