Footer bg image fix

--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -30,6 +30,7 @@
     background-image: url('../images/Layer_7_copy_2.svg');
     background-repeat: no-repeat;
     background-position: top;
+    background-size: contain;
     padding: 200px 0 50px;
 }
 
