Only add lat long data attributes if needed

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -159,7 +159,7 @@
         width: 1180px;
         margin: auto;
 
-        .sortCatSection3 {
+        .sort-categories-section-3 {
             &:before,
             &:after {
                 display: none;
@@ -191,7 +191,7 @@
 
     }
 
-    .sortCatSection3 {
+    .sort-categories-section-3 {
         flex: 1 0 14%;
         min-width: 170px;
         padding: 10px 0 10px 10px;
