'click for prices on private self pay column'

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -260,6 +260,11 @@
         line-height: 20px;
         text-align: center;
 
+        small {
+            font-size: 10px;
+            line-height: 1;
+        }
+
         p {
             margin-bottom: 0;
         }
