Sticky search header

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -148,6 +148,14 @@
     .sort-categories-parent {
         background-color: $teal;
 
+        &.sticky {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            width: 100%;
+            z-index: 10;
+        }
     }
 
     .sort-categories-header,
