Button background bug

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -446,7 +446,7 @@
 
 
     //gradient button
-    &.btn {
+    &.btn-grad {
         &:hover {
             background-position: right !important;
         }
