--- a/resources/sass/components/basic/_helpLink.scss
+++ b/resources/sass/components/basic/_helpLink.scss
@@ -3,7 +3,7 @@
 // Trigger the tooltip speech bubble
 .help-link {
     color: $black;
-    position: $absolute;
+    position: absolute;
     border-radius: 50%;
     background: $lightGrey;
     width: 15px;
