--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -1,7 +1,7 @@
 .home-page {
 
     .form-child {
-        position: $relative;
+        position: relative;
         margin-bottom: 20px;
     }
 
@@ -144,7 +144,7 @@
         }
 
         .numeral {
-            position: $absolute;
+            position: absolute;
             top: 0;
             left: 22%;
             font-size: 1.2em;
