--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -6,7 +6,7 @@
     margin-bottom: 50px;
     color: #1b1b1b;
 
-    .pageTitle {
+    .section-title {
         font-size: 40px;
         font-weight: 600;
         letter-spacing: -2px;
