--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -4,7 +4,7 @@
         flex-basis: 85%;
         display: flex;
 
-        .postProxChild {
+        .postcode-proximity-child {
             flex: 1;
             padding: 0 20px;
             &:not(:last-child) {
@@ -21,7 +21,7 @@
         justify-content: flex-end;
         flex-basis: 15%;
 
-        .postProxChild {
+        .postcode-proximity-child {
             justify-content: flex-end;
             align-items: flex-end;
         }
@@ -60,10 +60,10 @@
         line-height: 15px;
     }
 
-    .filterParent {
+    .filter-parent {
         width: $fullWidth;
         background-color: $white;
-        padding: 23px 0;
+        padding-top: 23px;
     }
 
     //.filter {
@@ -71,12 +71,12 @@
     //    margin: $centerOnPage;
     //}
 
-    .postProx,
-    .selectProx {
+    .postcode-proximity,
+    .select-proximity {
         @include flex;
     }
 
-    .postProxChild {
+    .postcode-proximity-child {
         @include uniformAlignment;
         position: relative;
         margin-bottom: 20px;
