Header padding/right alignment

--- a/resources/MyFontsWebfontsKit/MyFontsWebfontsKit/Start here files/layout.css
+++ b/resources/MyFontsWebfontsKit/MyFontsWebfontsKit/Start here files/layout.css
@@ -3,19 +3,19 @@ body {
 	font-size: 14px;
 	line-height: 1.5em;
 	background-color: #F1F1F1;
-	margin: 0px;
+	margin: 0;
 	background-position: top;
 }
 #header, #footer {
 	font-size: 10px;
 	width: 720px;
-	margin: 10px auto 0px auto;
+	margin: 10px auto 0 auto;
 	text-align: center;
 	line-height: 1.2em;
 }
 #main_container {
 	width: 680px;
-	margin: 0px auto 20px auto;
+	margin: 0 auto 20px auto;
 	background-color: #FFFFFF;
 	padding: 40px 20px;
 }
@@ -30,7 +30,7 @@ a:active {
 	color: #6699FF;
 }
 p {
-	margin: 0px 0px 1em 0px;
+	margin: 0 0 1em 0;
 	padding: 0;
 }
 h1, h2, h3, h4, h5 {
@@ -58,15 +58,15 @@ h5 {
 	font-weight: bold;
 }
 ul {
-	margin: 0px;
+	margin: 0;
 	padding-left: 18px;
 }
 li {
 	line-height: 2em;
 }
 hr {
-	height: 0px;
-	border-width: 1px 0px 0px 0px;
+	height: 0;
+	border-width: 1px 0 0 0;
 	border-style: dotted none none none;
 	border-color: #CCC;
 	padding-bottom: 5px;
@@ -77,9 +77,9 @@ div.container-article {
 	border-top: 1px dotted #CCC;
 }
 div.webfont-credits, .webfont-twocolumns, .webfont-sample-block {
-	padding: 0px;
+	padding: 0;
 	/*border: 1px solid #CCC;*/
-	float: left; 
+	float: left;
 }
 .webfont-article-block {
 	margin: 0 auto 20px auto;
@@ -113,18 +113,18 @@ div.webfont-credits, .webfont-twocolumns, .webfont-sample-block {
 	margin: 0 10px 0 0;
 }
 div.clearer {
-	font-size: 0px;
+	font-size: 0;
 	height: 5px;
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	clear: both;
-	line-height: 0px;
+	line-height: 0;
 }
 cite, em {
 	font-style: italic;
 }
 
-/* 
+/*
 	Code formatting
 */
 pre code {
