--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -29,7 +29,7 @@
 
             a:hover {
                 //top: -289.25px;
-                //box-shadow: 0px 0px 0px #3686a3;
+                //box-shadow: 0 0 0 #3686a3;
                 text-decoration: none !important;
 
                 .btn-read-more {
