--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -287,8 +287,8 @@
                 background-image: url('../images/icons/circle-check.svg');
                 @include icon-bg-center;
                 position: absolute;
-                left: 0px;
-                top: 0px;
+                left: 0;
+                top: 0;
                 width: 40px;
                 height: 40px;
             }
@@ -321,8 +321,8 @@
                 background-image: url('../images/icons/circle-check-pink.svg');
                 @include icon-bg-center;
                 position: absolute;
-                left: 0px;
-                top: 0px;
+                left: 0;
+                top: 0;
                 width: 22px;
                 width: 40px;
                 height: 40px;
@@ -415,7 +415,7 @@
 
         // Button on the floating green bar
         &.btn-special-tab {
-            padding: 0px 20px 0px 65px;
+            padding: 0 20px 0 65px;
             color: $white;
             height: 60px;
             line-height: 60px;
@@ -445,7 +445,7 @@
 
         // Back to top button
         &.btn-back-to-top {
-            padding: 0px 50px 0px 20px;
+            padding: 0 50px 0 20px;
             color: $white;
             height: 60px;
             line-height: 60px;
