--- a/resources/sass/components/basic/select.scss
+++ b/resources/sass/components/basic/select.scss
@@ -50,7 +50,7 @@
 
 .results-page {
     .dropdown-toggle,
-    .searchPageSelect {
+    .results-page-select {
         max-width: 158px;
     }
 }
