--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -78,9 +78,7 @@
             display: inline-block;
 
             &:last-child {
-                a {
-                    margin-right: 0;
-                }
+                margin-right: -15px;
             }
 
             > a {
@@ -88,6 +86,7 @@
                 color: $white;
                 font-size: 1.3em;
                 padding: 30px 15px;
+                line-height: 1;
                 transition: $transition;
 
                 &.active {
