fix NHS enquiry modal

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -73,6 +73,7 @@ $popover-arrow-color: #fff;
 // Modal
 $modal-inner-padding: 0;
 $modal-content-border-radius: 16px;
+$modal-content-border-width: 0;
 
 // Modal close buttons
 $close-text-shadow: 0;
