--- a/resources/sass/_typography.scss
+++ b/resources/sass/_typography.scss
@@ -78,3 +78,9 @@
     font-weight: normal;
     font-style: normal;
 }
+
+.font-semibold {
+    font-family: SofiaPro-SemiBold, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+}
