--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,6 +28,7 @@
 //PAGES
 @import 'pages/homePage';
 @import 'pages/resultsPage';
+@import 'pages/content';
 
 // TEMPLATE FILES
 @import 'layout/header';
