add accordion stylesheet

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -44,6 +44,7 @@
 @import 'components/pagination';
 @import 'components/compare';
 @import 'components/form';
+@import 'components/accordion';
 
 // BASIC COMPONENTS
 @import 'components/banner';
